--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -8,30 +8,7 @@
 %html.no-js{ :lang => "en" }
   <!--<![endif]-->
   %head
-    %meta{ :charset => "utf-8" }
-
-    -# Use the .htaccess and remove these lines to avoid edge case issues.
-    -# More info: h5bp.com/i/378
-    %meta{ "http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1" }
-
-    %title= @item[:title]
-    %meta{ :name => "description", :content => "" }
-    %meta{ :name => "author", :content => "" }
-    %meta{ :name => "generator", :content => "nanoc #{Nanoc::VERSION}" }
-
-    -# Mobile viewport optimized: h5bp.com/viewport
-    %meta{ :name => "viewport", :content => "width=device-width" }
-
-    -# Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons
-
-    %link{ :rel => "stylesheet", :href => "css/style.css" }
-
-    -# More ideas for your <head> here: h5bp.com/d/head-Tips
-
-    -# All JavaScript at the bottom, except this Modernizr build.
-    -# Modernizr enables HTML5 elements & feature detects for optimal performance.
-    -# Create your own custom Modernizr build: www.modernizr.com/download/
-    %script{ :src => "js/vendor/modernizr.js" }
+    = render "_head"
 
   %body
     -# Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
@@ -64,7 +41,7 @@
     -# Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
     -# mathiasbynens.be/notes/async-analytics-snippet
     :javascript
-      var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+      var _gaq=[['_setAccount','UA-27056804-1'],['_trackPageview']];
       (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
       g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
       s.parentNode.insertBefore(g,s)}(document,'script'));
