Removed head controller class

--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -9,7 +9,7 @@
   <!--<![endif]-->
   %head
     = render "_head"
-  %body{ :class => "#{controller.controller_name}" }
+  %body
     -# Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
     -# chromium.org/developers/how-tos/chrome-frame-getting-started
     /[if lt IE 7 ]
