--- a/content/css/partials/_page.scss
+++ b/content/css/partials/_page.scss
@@ -61,15 +61,15 @@ strong, th {
 small {
   // Use font-size mixin to convert to percentage for YUI
   // http://developer.yahoo.com/yui/3/cssfonts/#fontsize
-  @include font-size(11px);  // approx 85% when base-font-size eq 13px
+  //@include font-size(11px);  // approx 85% when base-font-size eq 13px
 }
 
 // Add the 'required' attribute on your
 // inputs if you want to use these
 input:valid, textarea:valid {}
 input:invalid, textarea:invalid {
-  @include border-radius(1px);
-  @include single-box-shadow(red, 0, 0, 5px, 0);
+  //@include border-radius(1px);
+  //@include single-box-shadow(red, 0, 0, 5px, 0);
 }
 .no-boxshadow input:invalid,
 .no-boxshadow textarea:invalid { background-color: #f0dddd; }
@@ -84,11 +84,11 @@ body {}
 #container {
   width: 636px;
   margin: 0 auto;
-  
+
   #info {
     margin-left: 145px;
     margin-top: 35px;
-    
+
     #social {
       float: left;
       width: 32px;
@@ -99,13 +99,13 @@ body {}
       padding-right: 15px;
       border-right: 1px solid #ccc;
       margin-right: 15px;
-      
+
       #facebook {
         position: absolute;
         bottom: 0;
         left: 0;
       }
-      
+
       .icon {
         display: inline-block;
         zoom: 1;
@@ -115,7 +115,7 @@ body {}
     #contact {
       float: left;
       margin-top: -3px;
-      
+
       p {
         font-size: 14px;
         margin-bottom: 17px;
