--- a/content/css/style.scss
+++ b/content/css/style.scss
@@ -1,5 +1,6 @@
 // Here's where we define some default constants
 @import "partials/base";
+@import "compass/reset";
 
 //
 // compass-h5bp (HTML5 Boilerplate for Compass/SASS)
