Corrected default font vars

--- a/content/css/partials/_base.scss
+++ b/content/css/partials/_base.scss
@@ -1,10 +1,10 @@
 // This file must be imported before loading html5-boilerplate
 
-$base-font-family: 'Open Sans', sans-serif;  // default font-family
+$font-family: 'Open Sans', sans-serif;  // default font-family
 
-$base-font-size: 13px;  // default font-size for YUI fonts
+$font-size: 13px;  // default font-size for YUI fonts
 
-$base-line-height: 1.231;  // default line-height for YUI fonts
+$line-height: 1.231;  // default line-height for YUI fonts
 
 $font-color: #ccc;
 
