--- a/content/index.haml
+++ b/content/index.haml
@@ -4,7 +4,7 @@ title: Hair Care by Carlos Rodriguez
 
 %h1 Carlos Rodriguez
 
-%h2 Coming Soon
+%h2 Site Coming Soon!
 
 %h3
   Now accepting appointments at
