--- a/content/css/partials/_base.scss
+++ b/content/css/partials/_base.scss
@@ -4,13 +4,15 @@ $font-family: 'Open Sans', sans-serif;  // default font-family
 
 $font-size: 13px;  // default font-size for YUI fonts
 
+$blue: #3258a4;
+
 $line-height: 1.231;  // default line-height for YUI fonts
 
 $link-color: #000;
 
 $font-color: #666;
 
-$link-hover-color: $font-color;
+$link-hover-color: $blue;
 
 $link-active-color: $link-hover-color;
 
