--- a/content/css/partials/_page.scss
+++ b/content/css/partials/_page.scss
@@ -25,7 +25,7 @@ h1, h2 {
 
 h1 {
   font-size: 30px;
-  color: #3258a4;
+  color: $blue;
   letter-spacing: 12px;
   text-align: center;
   margin-top: 128px;
