--- a/layouts/_head.html.haml
+++ b/layouts/_head.html.haml
@@ -8,6 +8,7 @@
 %meta{ :name => "description", :content => "" }
 %meta{ :name => "author", :content => "" }
 %meta{ :name => "generator", :content => "nanoc #{Nanoc::VERSION}" }
+%meta{ :name => "google-site-verification", :content => "II7uRVCr3d6qierj6t0GggEy7o0SzUC4SpkQ7ZuIxZw" }
 
 -# Mobile viewport optimized: j.mp/bplateviewport
 %meta{ :name => "viewport", :content => "width=device-width, initial-scale=1.0" }/
